# cwgan-gp-miyamoto

./: .gitignore  :00.bl  calc_cl.py  cwgan-gp-miyamoto.code-workspace  dist_0.789.npz  makefile  pyproject.toml  sandbox.ipynb  show_image.py  upsampling.py  util.py  utils.py
archives/: :00.bl  calc_variation.py  classify_by_cl.py  dist_0.789.npz  preprocessing.py  standarized.py  util.py
diffusion/: command.txt  eval.py  models.py  train.py
normal/: eval.py  models.py  train.py  util.py
wgan_gp/: command.txt  eval.py  models.py  plot_results.py  train.py
wgan_gp/archives/: discriminator_params_0  eval.py  generator_params_100  successive_label.npz  train.py
wgan_gp/results/: discriminator_params_100  final.npz  generator_params_0
xfoil-python/: libxfoil.dylib
xfoil-python/src/xfoil/: xfoil.py
