[tool.poetry]
name = "cwgan-gp-miyamoto"
version = "0.0.0"
description = "cWGAN-gp Repository"
authors = ["Yujin109 <koba.you.3939@gmail.com>"]
readme = "README.md"
# packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
pandas = "^2.1.3"
# neollm = { path = "./neo-llm-module" }
xfoil = { path = "./xfoil-python" }
deprecated = "^1.2.15"
scipy = "^1.15.1"
dotmap = "^1.3.30"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
black = "24.3.0"
isort = "^5.12.0"
pyproject-flake8 = "^6.0.0.post1"
jupyter-client = "^8.3.0"
jupyter = "^1.0.0"
ipykernel = "^6.25.0"
pytest = "^7.4.0"
pre-commit = "^3.3.3"
types-requests = "^2.31.0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = '''
/(
    \.venv
  | \.git
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.flake8]
max-line-length = 119
extend-ignore = ["E203", "W503", "W605", "E501", "W291", "E704"]
exclude = [".venv", ".git", "__pycache__"]
max-complexity = 30


[tool.mypy]
ignore_missing_imports = true
# follow_imports = normal
disallow_any_unimported = false
disallow_any_expr = false        # 式でのAny禁止
disallow_any_decorated = false
disallow_any_explicit = false    # 変数でAny禁止
disallow_any_generics = false    # ジェネリックで書かないの禁止
disallow_subclassing_any = false # Anyのサブクラス禁止

disallow_untyped_calls = true      # 型なし関数呼び出し禁止 `a: int = f()`
disallow_untyped_defs = true       # 型なし関数定義禁止 `def f(a: int) -> int`
disallow_incomplete_defs = true    # 一部の型定義を禁止 `def f(a: int, b)`
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true

warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true     # 辿りつかないコードの検出
allow_redefinition = false

show_error_context = true
show_column_numbers = true
